--- a/back-end/server/package.json
+++ b/back-end/server/package.json
@@ -19,9 +19,12 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.2"
+    "multer": "^2.0.2",
+    "mysql2": "^3.14.2",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
+    "forever": "^4.0.3",
     "nodemon": "^3.1.10"
   }
 }
